<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="sort_by_type">By type</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">mess_annule_compressmess_annule_compress with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acheter">Buy</string>
    <string name="acheter_premium">Buy the version without ads</string>
    <string name="annuler">Cancel</string>
    <string name="app_name">SN Unzip</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arret_en_cours">Stop in progress ...</string>
    <string name="arrete">Stop</string>
    <string name="au_moins_un_fichier">Please select a file</string>
    <string name="aucun_app_pour_fichier">No application found for opening this file</string>
    <string name="aucune_sdcard">No sdcard found.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="byteShort">B</string>
    <string name="changeSdcard">Change storage</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_all">Select all</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="compress">OK</string>
    <string name="compress_encours">Zip in progress...</string>
    <string name="confirmation_suppr">Are you sure you want to delete this file ?</string>
    <string name="crc_invalide">Wrong password or corrupted archive.</string>
    <string name="decompress_encours">Extract in progress...</string>
    <string name="encryption">Encryption</string>
    <string name="erreur">Error</string>
    <string name="exit_message">Are you sure you want exit the app ?</string>
    <string name="exit_no">No</string>
    <string name="exit_title">Exit ?</string>
    <string name="exit_yes">Yes</string>
    <string name="extract_dir_diag_error_invalid_char">Invalid character :</string>
    <string name="extract_dir_diag_error_invalid_fileexist">Invalid name : a file already exists with the same name</string>
    <string name="extract_dir_diag_error_invalid_name">Invalid name : the name cannot contain more than 255 charracters.</string>
    <string name="extract_dir_diag_error_invalid_nameempty">Invalid name : the name cannot be empty</string>
    <string name="extract_dir_diag_info">Touch me to extract the archive in the folder below :</string>
    <string name="extraire">Extract</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fichier_existe">File exists</string>
    <string name="fichiers">file(s)</string>
    <string name="file_exist">already exist, overwrite it ?</string>
    <string name="finish">Finish</string>
    <string name="gigabyteShort">GB</string>
    <string name="up_one_level">Up one level</string>
    <string name="up_multiple_levels">Up multiple levels</string>
    <string name="maincmd_add">Add files to archive</string>
    <string name="maincmd_extr">Extract files</string>
    <string name="maincmd_delete">Delete files and folders</string>
    <string name="maincmd_test">Test archived files</string>
    <string name="maincmd_repair">Repair archive</string>
    <string name="maincmd_benchmark">Benchmark</string>
    <string name="maincmd_send">Send</string>
    <string name="maincmd_information">Information</string>
    <string name="maincmd_settings">Settings</string>
    <string name="maincmd_help">Help</string>
    <string name="btn_ok">OK</string>
    <string name="btn_close">Close</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_help">Help</string>
    <string name="btn_save_settings">Save settings</string>
    <string name="btn_browse">Browse...</string>
    <string name="extropt_destpath">Destination path</string>
    <string name="extropt_overwrite_ask">Ask before overwrite</string>
    <string name="extropt_overwrite_all">Overwrite without prompt</string>
    <string name="extropt_overwrite_skip">Skip existing files</string>
    <string name="extropt_keep_broken">Keep broken files</string>
    <string name="extropt_nopath">Do not extract paths</string>
    <string name="extropt_to_subfolders">Extract archives to subfolders</string>
    <string name="extropt_display_extracted">Display extracted files</string>
    <string name="ask_replace_file_exists">The following file already exists</string>
    <string name="ask_replace_with_this">would you like to replace it with this one</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_replace">Replace</string>
    <string name="btn_skip_all">Skip All</string>
    <string name="btn_replace_all">Replace All</string>
    <string name="btn_rename">Rename</string>
    <string name="btn_rename_auto">Rename Automatically</string>
    <string name="btn_select_all">Select all</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_set_default">Set as default</string>
    <string name="navmenu_refresh">Refresh folder contents</string>
    <string name="menu_mainctx_open_archive">Open as archive</string>
    <string name="menu_mainctx_add_options">Add to archive...</string>
    <string name="menu_mainctx_extr_here">Extract here</string>
    <string name="menu_mainctx_extr_options">Extract files...</string>
    <string name="menu_mainctx_copy_clipboard">Copy to clipboard</string>
    <string name="menu_mainctx_cut">Cut</string>
    <string name="menu_mainctx_paste">Paste</string>
    <string name="menu_mainctx_new_folder">New folder</string>
    <string name="menu_mainctx_delete">Delete</string>
    <string name="menu_mainctx_rename">Rename</string>
    <string name="prefs_about_title">About RAR</string>
    <string name="prefs_startup_title">Start-up folder</string>
    <string name="prefs_sound_title">Sound</string>
    <string name="prefs_sound_summary">Beep after long operations</string>
    <string name="prefs_sort_title">Sort file list</string>
    <string name="prefs_arcfirst_title">Archives first</string>
    <string name="prefs_arcfirst_summary">Show archives at the top of list</string>
    <string name="prefs_archistory_title">Archive history</string>
    <string name="prefs_archistory_summary">Add archive names to history</string>
    <string name="prefs_hidden_files_title">Hidden files</string>
    <string name="prefs_hidden_files_summary">Show hidden files and folders</string>
    <string name="prefs_thumbnails_title">Thumbnails</string>
    <string name="prefs_thumbnails_summary">Show thumbnails</string>
    <string name="prefs_theme_title">Theme</string>
    <string name="btn_save">Save</string>
    <string name="btn_copy">Copy</string>
    <string name="info_files">Files</string>
    <string name="info_folders">Folders</string>
    <string name="info_total_size">Total size</string>
    <string name="info_calc_checksum">Calculate checksums</string>
    <string name="info_md5">MD5</string>
    <string name="info_sha1">SHA-1</string>
    <string name="info_sha256">SHA-256</string>
    <string name="info_crc32">CRC32</string>
</resources>