<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:paddingTop="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/browse_justforpadding" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@+id/btnpanel" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <ListView android:id="@+id/proforg_list" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"/>
    </RelativeLayout>
    <LinearLayout android:id="@+id/btnpanel" style="@style/ButtonPanelOuterLayout">
        <LinearLayout style="@style/ButtonPanelInnerLayout">
            <Button android:id="@+id/btnselectall" android:text="@string/btn_select_all" android:onClick="btnselectall_clicked" style="@style/ButtonPanelButton"/>
            <Button android:id="@+id/btndelete" android:text="@string/btn_delete" android:onClick="btndelete_clicked" style="@style/ButtonPanelButton"/>
            <Button android:id="@+id/btnsetdefault" android:text="@string/btn_set_default" android:onClick="btnsetdefault_clicked" style="@style/ButtonPanelButton"/>
        </LinearLayout>
        <LinearLayout style="@style/ButtonPanelInnerLayout">
            <Button android:id="@+id/btncancel" android:text="@string/btn_cancel" android:onClick="btncancel_clicked" style="@style/ButtonPanelButton"/>
            <Button android:id="@+id/btnhelp" android:text="@string/btn_help" android:onClick="btnhelp_clicked" style="@style/ButtonPanelButton"/>
            <Button android:id="@+id/btnok" android:text="@string/btn_ok" android:onClick="btnok_clicked" style="@style/ButtonPanelButton"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
